[package]
name = "adi-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "adi-http"
path = "src/main.rs"

[dependencies]
adi-core.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
